--- a/Tests/Editor/GAOS.EventSystem.Editor.Tests.asmdef
+++ b/Tests/Editor/GAOS.EventSystem.Editor.Tests.asmdef
@@ -1,24 +1,27 @@
 {
-  "name": "GAOS.EventSystem.Editor.Tests",
-  "rootNamespace": "",
-  "references": [
-    "UnityEngine.TestRunner",
-    "UnityEditor.TestRunner",
-    "GAOS.EventSystem.Runtime",
-    "GAOS.ServiceLocator",
-    "GAOS.ServiceLocator.Editor"
-  ],
-  "includePlatforms": ["Editor"],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": true,
-  "precompiledReferences": [
-    "nunit.framework.dll"
-  ],
-  "autoReferenced": false,
-  "defineConstraints": [
-    "UNITY_INCLUDE_TESTS"
-  ],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "GAOS.EventSystem.Editor.Tests",
+    "rootNamespace": "",
+    "references": [
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner",
+        "GAOS.ServiceLocator",
+        "GAOS.ServiceLocator.Editor",
+        "GAOS.EventSystem",
+        "GAOS.Logger"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
