--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.gaos.eventsystem",
   "displayName": "GAOS Event System",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "unity": "2021.3",
   "description": "A type-safe event system with synchronous and asynchronous support for Unity.",
   "author": {
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "com.gaos.servicelocator": "0.1.0",
+    "com.gaos.logger": "0.1.0",
     "com.unity.nuget.newtonsoft-json": "3.0.2"
   },
   "license": "MIT",
